{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 10,
  "lineage": "5e81804a-5e53-d342-e58a-d6e8a748ba1f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:loadbalancer/app/cleartap-wordpress/e825e56b6f5c3ac9",
            "arn_suffix": "app/cleartap-wordpress/e825e56b6f5c3ac9",
            "dns_name": "cleartap-wordpress-2060744365.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:loadbalancer/app/cleartap-wordpress/e825e56b6f5c3ac9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cleartap-wordpress",
            "security_groups": [
              "sg-0deffa5ef8a976dc0",
              "sg-eb14b792"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-3b084a77"
              },
              {
                "subnet_id": "subnet-8d0693f6"
              },
              {
                "subnet_id": "subnet-a53f22cd"
              }
            ],
            "subnets": [
              "subnet-3b084a77",
              "subnet-8d0693f6",
              "subnet-a53f22cd"
            ],
            "vpc_id": "vpc-fa10e491",
            "zone_id": "ZP97RAFLXTNZK"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:listener/app/cleartap-wordpress/e825e56b6f5c3ac9/6741aea8e42aae4d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:targetgroup/wordpress/4da5a94d91117ea9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:listener/app/cleartap-wordpress/e825e56b6f5c3ac9/6741aea8e42aae4d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:loadbalancer/app/cleartap-wordpress/e825e56b6f5c3ac9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": ""
          },
          "depends_on": [
            "data.aws_lb.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_rules",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:targetgroup/wordpresstg/272fe479dac5c5c0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:listener-rule/app/cleartap-wordpress/e825e56b6f5c3ac9/6741aea8e42aae4d/860c3c1543980a54",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:listener-rule/app/cleartap-wordpress/e825e56b6f5c3ac9/6741aea8e42aae4d/860c3c1543980a54",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:listener/app/cleartap-wordpress/e825e56b6f5c3ac9/6741aea8e42aae4d",
            "priority": 1
          },
          "depends_on": [
            "aws_lb_target_group.wordpresstg",
            "data.aws_lb_listener.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpresstg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:targetgroup/wordpresstg/272fe479dac5c5c0",
            "arn_suffix": "targetgroup/wordpresstg/272fe479dac5c5c0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:765771042989:targetgroup/wordpresstg/272fe479dac5c5c0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpresstg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-fa10e491"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:765771042989:security-group/sg-031cb9d14c4c922ee",
            "description": "security group for wordpress-cluster service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound connections for all protocols and all ports for ECS service wordpress-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031cb9d14c4c922ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound TCP connections from the LB to ECS service wordpress-cluster",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-cluster",
            "name_prefix": "",
            "owner_id": "765771042989",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-fa10e491"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_in_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound TCP connections from the LB to ECS service wordpress-cluster",
            "from_port": 80,
            "id": "sgrule-361796170",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-031cb9d14c4c922ee",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_out",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound connections for all protocols and all ports for ECS service wordpress-cluster",
            "from_port": 0,
            "id": "sgrule-2509463422",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-031cb9d14c4c922ee",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    }
  ]
}